# pyopenclaw

./: .env.example  LICENSE  README.md  pyproject.toml  setup_env.py
design/: pyopenclaw-design-v2.md  pyopenclaw-design.md
src/pyopenclaw/: config.py  main.py  schema.sql
src/pyopenclaw/agent/: context_assembler.py  execution_loop.py  model_invoker.py  runtime.py  system_prompt.py  tool_call_parser.py
src/pyopenclaw/channels/: base.py
src/pyopenclaw/channels/cli/: adapter.py
src/pyopenclaw/gateway/: event_bus.py  http_handler.py  server.py  ws_handler.py
src/pyopenclaw/memory/: base.py  embedder.py  fts_store.py  hybrid_search.py  long_term.py  manager.py  short_term.py  vector_store.py
src/pyopenclaw/plugins/: registry.py
src/pyopenclaw/security/: acl.py  device_pairing.py  injection_firewall.py  layer.py
src/pyopenclaw/session/: compactor.py  conversation_store.py  lane_queue.py  manager.py
src/pyopenclaw/tools/: base.py  engine.py  filesystem.py  shell.py
